// SPDX-License-Identifier: MIT

syntax = "proto2";

import "opts.proto";
import "fown.proto";
import "sk-opts.proto";

message nl_sk_opts_entry {
	required bool			pktinfo		= 1;
	required bool			broadcast_error = 2;
	required bool			no_enobufs	= 3;
	required bool			listen_all_nsid	= 4;
	required bool			cap_ack		= 5;
}

message netlink_sk_entry {
	required uint32			id		=  1;
	required uint32			ino		=  2;
	required uint32			protocol	=  3;
	required uint32			state		=  4;
	required uint32			flags		=  6 [(criu).hex = true];
	required uint32			portid		=  7;
	repeated uint32			groups		=  8;
	required uint32			dst_portid	=  9;
	required uint32			dst_group	=  10;
	required fown_entry		fown		=  11;
	required sk_opts_entry		opts		=  12;
	optional uint32			ns_id		=  13;
	optional nl_sk_opts_entry	nl_opts		=  14;
}
